feat: add phpmy admin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,18 @@ services:
     networks:
       - app-network
 
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: dunder_mifflin_phpmyadmin
+    restart: unless-stopped
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: root_password
+    ports:
+      - "9001:80"
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
